added handlers and other. fix bugs. review
